# qrev-instructor

./: .gitignore  Makefile  README.md  pyproject.toml
qrev_instructor/: __init__.py  apis.py  client.py  maybe.py  models.py  utils.py
tests/: test_anthropic.py  test_choose_llm_type.py  test_model_functions.py  test_openai.py
